force-app/main/default/objects/Delivery__c/fields/Agri_Order__c.field-meta.xml
<CustomField>
    <fullName>Agri_Order__c</fullName>
    <label>Agri Order</label>
    <referenceTo>Agri_Order__c</referenceTo>
    <relationshipLabel>Deliveries</relationshipLabel>
    <relationshipName>Deliveries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>