force-app/main/default/objects/Delivery__c/fields/Driver_Contact__c.field-meta.xml
<CustomField>
    <fullName>Driver_Contact__c</fullName>
    <label>Driver Contact</label>
    <type>Phone</type>
</CustomField>